// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="https://www.baidu.com/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  百度
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="https://www.baidu.com/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  百度
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="https://www.baidu.com/"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  百度
</a>
`;
